Add null checking on image names