@@ -6,12 +6,10 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 import java.sql.Date;
-import java.util.Arrays;
-import org.junit.jupiter.api.BeforeEach;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
@@ -34,10 +32,21 @@ class ImageGalleryTest {
     @Test
     public void retrieveGalleryHomePage() throws Exception {
         Mockito.when(databaseAccess.getAllBasicImageDetails())
-            .thenReturn(Arrays.asList(new Image("Image 1", "HD proportioned image", "png", new Date(0))));
+            .thenReturn(List.of(new Image("Image 1", "HD proportioned image", "png", new Date(0))));
         this.mockMvc.perform(get("/gallery"))
             .andExpect(status().isOk())
             .andExpect(content().string(containsString("<img src=\"images/image-1.png\" alt=\"HD proportioned image\" onclick=\"updateHash(&quot;image-1&quot;)\">")));
+    }
+
+    @Test
+    public void missingDataIsHandled() throws Exception {
+        Mockito.when(databaseAccess.getAllBasicImageDetails())
+            .thenReturn(List.of(
+                new Image(null, "HD proportioned image", "png", new Date(0)),
+                new Image("Image 1", null, "png", new Date(0))));
+        this.mockMvc.perform(get("/gallery"))
+            .andExpect(status().isOk())
+            .andExpect(content().string(containsString("<img src=\"images/image-1.png\"")));
     }
 
     @Test
